[project]
name = "restaurant_finder_agent"
version = "0.1.0"
description = "restaurant_finder_agent using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.102.0",
    "langchain-core>=0.2.30",
]

[project.scripts]
restaurant_finder_agent = "restaurant_finder_agent.main:run"
run_crew = "restaurant_finder_agent.main:run"
train = "restaurant_finder_agent.main:train"
replay = "restaurant_finder_agent.main:replay"
test = "restaurant_finder_agent.main:test"

[tool.hatch.build.targets.wheel]
packages = ["src/restaurant_finder_agent"]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
